# llmes

./: .clangd  .gitignore  CMakeLists.txt  PROJECT_HISTORY.md  phase1_vs_phase2_report.md  readme.md
benchmark/: CMakeLists.txt
benchmark/runner/: benchmark_runner.cpp
benchmark/scripts/: README.md  merge_benchmark_metrics.py  run_benchmarks.sh  run_hft_macro_perf_record.sh  run_pgo_compare.sh  run_remote_compare.sh
benchmark/src/: bench_common.hpp  bench_cxl_hit.cpp  (+8 more)
build-verify/: compile_commands.json
core/matching_engine/: CMakeLists.txt
core/matching_engine/include/llme/matching/: array_side_book.hpp  cached_side_book.hpp  occupancy_tree.hpp  order_book.hpp  order_pool.hpp  price_level.hpp  pricelevel_pool.hpp  ring_buffer.hpp  types.hpp
core/matching_engine/src/: occupancy_tree.cpp  order_book.cpp
core/matching_engine/tests/: order_book_add_result_gtest.cpp  order_book_test.cpp
report/: all_phases_comparison.md  hft_macro_operation_pmc_design.md  phase10_progress.md  phase11_lto_pgo_results.md  phase1_vs_phase2_report.md  phase2b_to_phase_2e_comparison.md  phase2b_vs_phase2c_report.md  phase2b_vs_phase2e_report.md  phase3_hft_benchmark_design.md  phase4_chunk_pool_design_and_benchmark.md  phase4_hft_macro_optimization_priority.md  phase4_price_level_storage_strategy.md  phase5_macro_profiling_plan.md  phase6_benchmark_handle_migration.md  phase6_engine_handle_refactor_plan.md  phase7_benchmark_results.md  phase7_hot_ring_cold_map_design.md  phase8_array_side_book_results.md  phase8_fixed_array_design.md  phase9_per_scenario_benchmark.md  phase_evolution_phase1_to_phase6.md  plot_overall_comparison.py
(+81 files in other folders)
